--- a/estilonew.html
+++ b/estilonew.html
@@ -1,1 +1,51 @@
-<teamtalk>	<host>		<name>SIBARUGA (Auth Facebook)</name>		<address>tt5.nasional.online</address>		<tcpport>10447</tcpport>		<udpport>10447</udpport>		<encrypted>true</encrypted>		<auth>			<username>facebook</username>			<password></password>		</auth>		<join><channel>/</channel><password></password></join>	</host>	<host>		<name>LOKAL ENREKANG</name>		<address>cc210ceddbf2.sn.mynetname.net</address>		<tcpport>10555</tcpport>		<udpport>10555</udpport>		<encrypted>true</encrypted>		<auth>			<username>user</username>			<password>lokalenrekang</password>		</auth>		<join><channel>/LOKAL ENREKANG</channel><password></password></join>	</host>	<host>		<name>ESTILO NEW</name>		<address>103.140.55.77</address>		<tcpport>22222</tcpport>		<udpport>22222</udpport>		<encrypted>true</encrypted>		<auth>			<username></username>			<password></password>		</auth>		<join><channel>/</channel><password></password></join>	</host>	<host>		<name>RPV</name>		<address>202.157.177.180</address>		<tcpport>10333</tcpport>		<udpport>10333</udpport>		<encrypted>true</encrypted>		<auth>			<username></username>			<password></password>		</auth>		<join><channel>/</channel><password></password></join>	</host></teamtalk>
+<teamtalk>	
+  <host>		
+    <name>SIBARUGA (Auth Facebook)</name>		
+    <address>tt5.nasional.online</address>		
+    <tcpport>10447</tcpport>		
+    <udpport>10447</udpport>		
+    <encrypted>true</encrypted>		
+    <auth>			
+      <username>facebook</username>			
+      <password></password>		
+    </auth>		
+    <join><channel>/</channel><password></password></join>	
+  </host>	
+  <host>		
+    <name>LOKAL ENREKANG</name>		
+    <address>cc210ceddbf2.sn.mynetname.net</address>		
+    <tcpport>10555</tcpport>		
+    <udpport>10555</udpport>		
+    <encrypted>true</encrypted>		
+    <auth>			
+      <username>user</username>			
+      <password>lokalenrekang</password>		
+    </auth>		
+    <join><channel>/LOKAL ENREKANG</channel>
+      <password></password></join>	
+  </host>	
+  <host>		
+    <name>ESTILO NEW</name>		
+    <address>103.140.55.77</address>		
+    <tcpport>22222</tcpport>		
+    <udpport>22222</udpport>		
+    <encrypted>true</encrypted>		
+    <auth>			
+      <username></username>			
+      <password></password>		
+    </auth>		
+    <join><channel>/</channel><password></password></join>	
+  </host>	
+  <host>		
+    <name>RPV</name>		
+    <address>202.157.177.180</address>		
+    <tcpport>10333</tcpport>		
+    <udpport>10333</udpport>		
+    <encrypted>true</encrypted>		
+    <auth>			
+      <username></username>			
+      <password></password>		
+    </auth>		
+    <join><channel>/</channel><password></password></join>	
+  </host>
+</teamtalk>
