--- a/estilonew.html
+++ b/estilonew.html
@@ -1,3 +1,4 @@
+<body>
 <teamtalk>	
   <host>		
     <name>SIBARUGA (Auth Facebook)</name>		
@@ -49,3 +50,4 @@
     <join><channel>/</channel><password></password></join>	
   </host>
 </teamtalk>
+  </body>
