--- a/estilonew.html
+++ b/estilonew.html
@@ -1,4 +1,4 @@
-<body>
+<html>
 <teamtalk>	
   <host>		
     <name>SIBARUGA (Auth Facebook)</name>		
@@ -50,4 +50,4 @@
     <join><channel>/</channel><password></password></join>	
   </host>
 </teamtalk>
-  </body>
+  </html>
